syntax = "proto3";

package upload;

// SERVICES
service UploadService{
    rpc UpdateUploadRecord(UploadRequest) returns (UploadResponse) {};
    rpc DeleteAllMediaOfCommentNotHaveInList(UploadRequest) returns (UploadResponse) {};
}

message UploadRequest{
    int32 target_id = 1;
    repeated int32 _medias = 2;
    bool isUpdatePostId = 3;
}

message DeleteAllMediaOfCommentNotHaveInListRequest{
    int32 comment_id = 1;
    repeated int32 _media_id = 2;
}

message UploadResponse{
    bool isSuccess = 1;
}